--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>  
 <body>
     <header>
+        
         <div class="topnav">
             <a class="active" href="#contact">Contact</a>
             <a href="#home">Home</a>
@@ -34,7 +35,7 @@
          Nullam suscipit non libero in cursus. Mauris ut tristique dui. Cras id ligula vel libero vestibulum bibendum. Sed vel est purus. Vestibulum mollis felis in turpis eleifend gravida.
 
     </h2>
-    <h3>saæjfoæwjfeoaærj</h3>
+    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
 </main> 
 
 <footer>
